# game_engine

GAME_ENGINE/: .gitignore  CMakeLists.txt  Doxyfile
GAME_ENGINE/main/: main  main.cpp
GAME_ENGINE/shader/depth_shader/: depth_vertex_shader.glsl
GAME_ENGINE/shader/scene_land/: fragment_shader.glsl  vertex_shader.glsl
GAME_ENGINE/shader/shadowed_scene/: fragment_shader.glsl  vertex_shader.glsl
GAME_ENGINE/shader/simple_scene/: fragment_shader.glsl  vertex_shader.glsl
GAME_ENGINE/shader/solar_system/: fragment_shader.glsl  vertex_shader.glsl
GAME_ENGINE/src/: Character.cpp  Character.hpp  MouseView.cpp  MouseView.hpp
GAME_ENGINE/src/game_element/: ButtonElement.cpp  ButtonElement.hpp  Character.cpp  Character.hpp  DoorElement.cpp  DoorElement.hpp
GAME_ENGINE/src/light/: DirectionLight.cpp  DirectionLight.hpp  DirectionLightBehavior.cpp  DirectionLightBehavior.hpp  Light.cpp  Light.hpp  LightBehavior.cpp  LightBehavior.hpp  LightShader.cpp  LightShader.hpp  PositionLight.cpp  PositionLight.hpp  PositionLightBehavior.cpp  PositionLightBehavior.hpp  SpotLight.cpp  SpotLight.hpp  SpotLightBehavior.cpp  SpotLightBehavior.hpp
GAME_ENGINE/src/light/light_behavior/: DirectionLightBehavior.cpp  DirectionLightBehavior.hpp  LightBehavior.hpp  PositionLightBehavior.cpp  PositionLightBehavior.hpp  SpotLightBehavior.cpp  SpotLightBehavior.hpp
GAME_ENGINE/src/material/: Material.cpp  Material.hpp  MaterialColor.cpp  MaterialColor.hpp  MaterialTexture.cpp  MaterialTexture.hpp
GAME_ENGINE/src/mesh/: LODMesh.cpp  LODMesh.hpp  Mesh.cpp  Mesh.hpp
GAME_ENGINE/src/physics/: AABB.cpp  AABB.hpp  BBFactory.cpp  BBFactory.hpp  BoundingBox.cpp  BoundingBox.hpp  Collision.cpp  Collision.hpp  PhysicsGeometry.cpp  PhysicsGeometry.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RigidBody.cpp  RigidBody.hpp  RigidBodyVolume.cpp  RigidBodyVolume.hpp
GAME_ENGINE/src/physics/bounding_box/: AABB.cpp  AABB.hpp  BBFactory.cpp  BBFactory.hpp  BoundingBox.cpp  BoundingBox.hpp  OBB.cpp  OBB.hpp  RCBB.cpp  RCBB.hpp  SphereBB.cpp  SphereBB.hpp
GAME_ENGINE/src/physics/force/: Force.cpp  Force.hpp  GravityForce.cpp  GravityForce.hpp
GAME_ENGINE/src/physics/ode/: EulerODE.cpp  EulerODE.hpp  ODE.cpp  ODE.hpp  ODEFactory.cpp  ODEFactory.hpp  RungeKutta4ODE.cpp  RungeKutta4ODE.hpp  VerletODE.cpp  VerletODE.hpp
GAME_ENGINE/src/physics/rigid_body_behavior/: MoveDoorBehavior.cpp  MoveDoorBehavior.hpp  MovementBehavior.cpp  MovementBehavior.hpp  RigidBodyBehavior.cpp  RigidBodyBehavior.hpp  SwitchColorBehavior.cpp  SwitchColorBehavior.hpp
GAME_ENGINE/src/scene/: BounceAABBScene.cpp  BounceAABBScene.hpp  BounceOBBScene.cpp  BounceOBBScene.hpp  BounceScene.cpp  BounceScene.hpp  BounceSphereBBScene.cpp  BounceSphereBBScene.hpp  LabScene.cpp  LabScene.hpp  Scene.cpp  Scene.hpp  SceneLand.cpp  SceneLand.hpp  ShadowedScene.cpp  ShadowedScene.hpp  SimpleScene.cpp  SimpleScene.hpp  SolarSystem.cpp  SolarSystem.hpp
GAME_ENGINE/src/scene_graph/: CameraNodeSG.cpp  CameraNodeSG.hpp  ElementSG.cpp  ElementSG.hpp  LightNodeSG.cpp  LightNodeSG.hpp  NodeGameSG.cpp  NodeGameSG.hpp  NodeOnTopSG.cpp  NodeOnTopSG.hpp  NodeSG.cpp  NodeSG.hpp  RootSG.cpp  RootSG.hpp
GAME_ENGINE/src/shader/: MainShaders.cpp  MainShaders.hpp  Shaders.cpp  Shaders.hpp  ShadersDataManager.cpp  ShadersDataManager.hpp  ShadowMap.cpp  ShadowMap.hpp  ShadowMapShaders.cpp  ShadowMapShaders.hpp  TextureManager.cpp  TextureManager.hpp  VAODataManager.cpp  VAODataManager.hpp
GAME_ENGINE/src/utils/: Geometry3D.cpp  Geometry3D.hpp  Transform.cpp  Transform.hpp  meshloader.cpp  meshloader.hpp  objloader.cpp  objloader.hpp  printer.cpp  printer.hpp  quaternion_utils.cpp  tangentspace.cpp  tangentspace.hpp  text2D.cpp  text2D.hpp  texture.cpp  texture.hpp
